--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#565353"
     tools:context="edu.dtcc.sean.microwave.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timerDisplay"
-        android:layout_marginRight="69dp"
-        android:layout_marginEnd="69dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="4"
@@ -95,16 +86,6 @@
         android:layout_toStartOf="@+id/button3" />
 
     <Button
-        android:text="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:id="@+id/button1"
-        android:layout_below="@+id/timerDisplay"
-        android:layout_toLeftOf="@+id/button5"
-        android:layout_toStartOf="@+id/button5" />
-
-    <Button
         android:text="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -135,4 +116,27 @@
         android:layout_alignBottom="@+id/buttonStart"
         android:layout_toRightOf="@+id/button8"
         android:layout_toEndOf="@+id/button8" />
+
+    <Button
+        android:text="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:id="@+id/button1"
+        android:layout_below="@+id/timerDisplay"
+        android:layout_toLeftOf="@+id/button2"
+        android:layout_toStartOf="@+id/button2" />
+
+    <TextView
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/timerDisplay"
+        android:text="000"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/button1"
+        android:layout_toEndOf="@+id/button1"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp" />
 </RelativeLayout>
