--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,10 +133,11 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/timerDisplay"
-        android:text="000"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/button1"
         android:layout_toEndOf="@+id/button1"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp" />
+        android:text="0"
+        android:maxLength="3"/>
 </RelativeLayout>
