--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -12,120 +13,150 @@
     tools:context="edu.dtcc.sean.microwave.MainActivity">
 
     <Button
-        android:text="4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_alignStart="@+id/button1"
-        android:id="@+id/button4" />
-
-    <Button
-        android:text="5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2"
-        android:id="@+id/button5" />
-
-    <Button
-        android:text="6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button5"
-        android:layout_alignRight="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
-        android:id="@+id/button6" />
-
-    <Button
-        android:text="7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button4"
-        android:layout_alignRight="@+id/button4"
-        android:layout_alignEnd="@+id/button4"
-        android:id="@+id/button7" />
-
-    <Button
-        android:text="8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button5"
-        android:layout_alignLeft="@+id/button5"
-        android:layout_alignStart="@+id/button5"
-        android:id="@+id/button8"
-        tools:text="8" />
-
-    <Button
-        android:text="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button7"
-        android:layout_alignLeft="@+id/button7"
-        android:layout_alignStart="@+id/button7"
-        android:id="@+id/button10" />
-
-    <Button
         android:text="Start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignBottom="@+id/button10"
         android:layout_alignRight="@+id/button8"
         android:layout_alignEnd="@+id/button8"
+        android:background="#333333"
+        android:textColor="#ffff"
         android:id="@+id/buttonStart" />
+
+    <ImageView
+        app:srcCompat="@drawable/unpoppedpopcorn"
+        android:id="@+id/popcornDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/button4"
+        android:layout_toLeftOf="@+id/button4" />
 
     <Button
         android:text="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/button2"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:layout_below="@+id/timerDisplay"
+        android:layout_toRightOf="@+id/button1"
+        android:layout_toEndOf="@+id/button1" />
 
     <Button
         android:text="3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/button3"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_above="@+id/button6"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/timerDisplay" />
+
+    <Button
+        android:text="1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button1"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:layout_alignTop="@+id/button2"
+        android:layout_toRightOf="@+id/popcornDisplay"
+        android:layout_toEndOf="@+id/popcornDisplay" />
+
+    <Button
+        android:text="4"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button4"
+        android:layout_below="@+id/button2"
+        android:layout_toLeftOf="@+id/button5"
+        android:layout_toStartOf="@+id/button5" />
+
+    <Button
+        android:text="5"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button5"
+        android:layout_below="@+id/button2"
+        android:layout_toLeftOf="@+id/button6"
+        android:layout_toStartOf="@+id/button6" />
+
+    <Button
+        android:text="6"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button6"
+        android:layout_below="@+id/button3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button9"
-        android:layout_alignBaseline="@+id/button8"
-        android:layout_alignBottom="@+id/button8"
-        android:layout_toRightOf="@+id/button5"
-        android:layout_toEndOf="@+id/button5"
-        tools:text="9" />
+        android:text="7"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button7"
+        android:layout_below="@+id/button4"
+        android:layout_toRightOf="@+id/popcornDisplay"
+        android:layout_toEndOf="@+id/popcornDisplay" />
+
+    <Button
+        android:text="8"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button8"
+        android:background="#333333"
+        android:textColor="#ffff"
+        tools:text="8"
+        android:layout_below="@+id/button5"
+        android:layout_toRightOf="@+id/button7"
+        android:layout_toEndOf="@+id/button7" />
+
+    <Button
+        android:text="0"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button10"
+        android:layout_below="@+id/button7"
+        android:layout_toRightOf="@+id/popcornDisplay"
+        android:layout_toEndOf="@+id/popcornDisplay" />
 
     <Button
         android:text="Stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/buttonStop"
-        android:layout_alignBaseline="@+id/buttonStart"
+        android:background="#333333"
+        android:textColor="#ffff"
         android:layout_alignBottom="@+id/buttonStart"
-        android:layout_toRightOf="@+id/button8"
-        android:layout_toEndOf="@+id/button8" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button8" />
 
     <Button
-        android:text="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:id="@+id/button1"
-        android:layout_below="@+id/timerDisplay"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:text="9"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button9"
+        android:background="#333333"
+        android:textColor="#ffff"
+        tools:text="9"
+        android:layout_alignBottom="@+id/button8"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button5" />
 
     <TextView
         android:textSize="30dp"
@@ -133,10 +164,9 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/timerDisplay"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
+        android:maxLength="3"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/button1"
-        android:layout_toEndOf="@+id/button1"
-        android:maxLength="3"/>
+        android:layout_toEndOf="@+id/button1" />
+
 </RelativeLayout>
