--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,37 +13,6 @@
     tools:context="edu.dtcc.sean.microwave.MainActivity">
 
     <Button
-        android:text="Start"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignBottom="@+id/button10"
-        android:layout_alignRight="@+id/button8"
-        android:layout_alignEnd="@+id/button8"
-        android:background="#333333"
-        android:textColor="#ffff"
-        android:id="@+id/buttonStart" />
-
-    <ImageView
-        app:srcCompat="@drawable/unpoppedpopcorn"
-        android:id="@+id/popcornDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button4"
-        android:layout_toLeftOf="@+id/button4" />
-
-    <Button
-        android:text="2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:id="@+id/button2"
-        android:background="#333333"
-        android:textColor="#ffff"
-        android:layout_below="@+id/timerDisplay"
-        android:layout_toRightOf="@+id/button1"
-        android:layout_toEndOf="@+id/button1" />
-
-    <Button
         android:text="3"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -52,8 +21,68 @@
         android:textColor="#ffff"
         android:layout_alignBottom="@+id/button2"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="9"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button9"
+        android:background="#333333"
+        android:textColor="#ffff"
+        tools:text="9"
+        android:layout_alignBottom="@+id/button7"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/timerDisplay" />
+        android:layout_below="@+id/button5" />
+
+    <Button
+        android:text="8"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button8"
+        android:background="#333333"
+        android:textColor="#ffff"
+        tools:text="8"
+        android:layout_alignBottom="@+id/button7"
+        android:layout_toRightOf="@+id/button7"
+        android:layout_toEndOf="@+id/button7"
+        android:layout_below="@+id/button4" />
+
+    <Button
+        android:text="Start"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/buttonStart"
+        android:layout_alignBottom="@+id/button10"
+        android:layout_toRightOf="@+id/button7"
+        android:layout_toEndOf="@+id/button7"
+        android:layout_below="@+id/button9" />
+
+    <Button
+        android:text="Stop"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/buttonStop"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:layout_alignBottom="@+id/button10"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button9" />
+
+    <Button
+        android:text="0"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:id="@+id/button10"
+        android:layout_below="@+id/button8"
+        android:layout_toRightOf="@+id/popcornDisplay"
+        android:layout_toEndOf="@+id/popcornDisplay" />
 
     <Button
         android:text="1"
@@ -62,9 +91,22 @@
         android:id="@+id/button1"
         android:background="#333333"
         android:textColor="#ffff"
-        android:layout_alignTop="@+id/button2"
+        android:layout_below="@+id/timerDisplay"
         android:layout_toRightOf="@+id/popcornDisplay"
-        android:layout_toEndOf="@+id/popcornDisplay" />
+        android:layout_toEndOf="@+id/popcornDisplay"
+        android:layout_marginTop="45dp" />
+
+    <Button
+        android:text="2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/button2"
+        android:background="#333333"
+        android:textColor="#ffff"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_toRightOf="@+id/button1"
+        android:layout_toEndOf="@+id/button1"
+        android:layout_alignTop="@+id/button1" />
 
     <Button
         android:text="4"
@@ -73,7 +115,7 @@
         android:background="#333333"
         android:textColor="#ffff"
         android:id="@+id/button4"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/button1"
         android:layout_toLeftOf="@+id/button5"
         android:layout_toStartOf="@+id/button5" />
 
@@ -84,9 +126,9 @@
         android:background="#333333"
         android:textColor="#ffff"
         android:id="@+id/button5"
-        android:layout_below="@+id/button2"
         android:layout_toLeftOf="@+id/button6"
-        android:layout_toStartOf="@+id/button6" />
+        android:layout_toStartOf="@+id/button6"
+        android:layout_below="@+id/button3" />
 
     <Button
         android:text="6"
@@ -95,9 +137,10 @@
         android:background="#333333"
         android:textColor="#ffff"
         android:id="@+id/button6"
-        android:layout_below="@+id/button3"
+        android:layout_alignBottom="@+id/button5"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button3" />
 
     <Button
         android:text="7"
@@ -110,63 +153,30 @@
         android:layout_toRightOf="@+id/popcornDisplay"
         android:layout_toEndOf="@+id/popcornDisplay" />
 
-    <Button
-        android:text="8"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:id="@+id/button8"
-        android:background="#333333"
-        android:textColor="#ffff"
-        tools:text="8"
-        android:layout_below="@+id/button5"
-        android:layout_toRightOf="@+id/button7"
-        android:layout_toEndOf="@+id/button7" />
-
-    <Button
-        android:text="0"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="#333333"
-        android:textColor="#ffff"
-        android:id="@+id/button10"
-        android:layout_below="@+id/button7"
-        android:layout_toRightOf="@+id/popcornDisplay"
-        android:layout_toEndOf="@+id/popcornDisplay" />
-
-    <Button
-        android:text="Stop"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:id="@+id/buttonStop"
-        android:background="#333333"
-        android:textColor="#ffff"
-        android:layout_alignBottom="@+id/buttonStart"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button8" />
-
-    <Button
-        android:text="9"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:id="@+id/button9"
-        android:background="#333333"
-        android:textColor="#ffff"
-        tools:text="9"
-        android:layout_alignBottom="@+id/button8"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/button5" />
+    <ImageView
+        app:srcCompat="@drawable/unpoppedpopcorn"
+        android:id="@+id/popcornDisplay"
+        android:layout_height="350dp"
+        android:layout_marginRight="134dp"
+        android:layout_marginEnd="134dp"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/button4"
+        android:layout_toStartOf="@+id/button4"
+        android:layout_width="400dp" />
 
     <TextView
         android:textSize="30dp"
-        android:textColor="#ffffff"
+        android:textColor="#00ff00"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/timerDisplay"
+        android:background="#333333"
         android:maxLength="3"
+        android:layout_marginTop="26dp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/button1"
-        android:layout_toEndOf="@+id/button1" />
+        android:layout_toRightOf="@+id/popcornDisplay"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
